--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,15 +6,16 @@
     <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
 
     <application
+        android:name=".DeudasApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:label="ResidentApp"
+        android:roundIcon="@drawable/ic_dep"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
             android:name=".viewcontrollers.activities.MainActivity"
-            android:label="@string/app_name"
+            android:label="ResidentApp"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -24,8 +25,9 @@
         </activity>
         <activity
             android:name=".viewcontrollers.activities.DeudaActivity"
-            android:label="@string/title_activity_deuda"
+            android:label="DEUDA"
             android:theme="@style/AppTheme.NoActionBar"></activity>
+
     </application>
 
 </manifest>
